# repoinsight

./: .gitignore  .pre-commit-config.yaml  .repoinsight.yml  INSTALL.md  README.md  check_ruff_errors.py  detailed_test.py  pyproject.toml  requirements.txt  run_repoinsight.py  sample_config.yml  test_gui.py  test_gui_flag.py  verify_gui_flag.py  verify_thread_fix.py
.clinerules/: 01-tech-stack.md  02-procject-structure.md  03-development-workflow.md  04-security.md  05-token-management.md  06-advanced-features.md  07-ui-standards.md  08-performance-benchmarks.md  09-cross-agent-collaboration.md
.github/workflows/: ci.yml
docs/: USAGE.md  repository_documentation.md
examples/: repoinsight-gemma3-4b.md  repoinsight-hermes3-3b.md  repoinsight-qwen25-0-5b.md
examples/profile/: repoinsight-cogito-v1-3b.yml  repoinsight-deepseek-r1-1-5b.yml  repoinsight-gemma2-2b.yml  repoinsight-gemma3-4b.yml  repoinsight-hermes3-3b.yml  repoinsight-qwen25-0-5b.yml  repoinsight-small-thinker-3b.yml  repoinsight-smollm2-1-7b.yml  repoinsight-tinyllama-1b.yml
src/repoinsight/: __init__.py  __main__.py
src/repoinsight/cli/: __init__.py  commands.py
src/repoinsight/config/: __init__.py  models.py  yaml.py
src/repoinsight/core/: __init__.py  engine.py  models.py
src/repoinsight/git/: __init__.py  metadata.py  repository.py
src/repoinsight/gui/: __init__.py  app.py  config_panel.py  main_window.py  preview_panel.py  profile_panel.py  worker.py
src/repoinsight/llm/: __init__.py  cache.py  client.py  prompts.py
tests/: __init__.py  test_config.py
(+6 files in other folders)
