[tool.poetry]
name = "repoinsight"
version = "0.1.0"
description = "A tool to automatically document Git repositories with AI-generated descriptions"
authors = ["satware <info@satware.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/satware/repoinsight"
packages = [
    {include = "repoinsight", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.5.2"
pydantic = "^2.4.2"
gitpython = "^3.1.40"
markdown = "^3.5"
pygments = "^2.16.1"
pyyaml = "^6.0.1"
aiohttp = "^3.8.6"
rich = "^13.6.0"
typer = "^0.15.2"
mypy = "^1.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
repoinsight = "repoinsight.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "ICN", "PIE", "PYI", "RET", "SIM", "TID"]
ignore = ["ANN101", "ANN102", "ANN401", "COM812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
flake8-bugbear.extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
